solved problem of aligning balls in line.
Remaining problem: now, balls get crushed when numbers are single digit

--- a/lotto.css
+++ b/lotto.css
@@ -23,20 +23,18 @@
 }
 
 #numberballs {
-    display: block;
     align-content: center;
     text-align: center;
-    font-size: 50px;
 }
 
 .balls {
-    display: block;
     background: rgb(211, 23, 23);
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    border-radius: 150px;
+    height: 150px;
+    width: 150px;
     margin-left: 10%;
     text-align: center;
     font-size: 60px;
-    margin: 10px;
+    margin: 60px;
 }
